fix text alignment in box

--- a/screen.css
+++ b/screen.css
@@ -264,8 +264,9 @@ h2{
 .faculty_bio > .bio_description {
 
  flex: 2 0 0%;
- text-align: center;
+ text-align: left;
  margin: auto 0;
+ margin-left: 0.5em;
 
 }
 
